--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -2,66 +2,75 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-    <RelativeLayout
-        android:id="@+id/account_info_layout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/account_image"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_margin="20dp"
-            android:src="@drawable/image_default_user"/>
-        <TextView
-            android:id="@+id/account_email"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_toRightOf="@id/account_image"/>
-        <TextView
-            android:id="@+id/account_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@id/account_image"
-            android:layout_below="@id/account_email"/>
-        <Button
-            android:id="@+id/account_login_and_registration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_below="@id/account_image"
-            android:layout_centerHorizontal="true"
-            android:text="ВОЙТИ/ЗАРЕГИСТРИРОВАТЬСЯ"/>
-        <Button
-            android:id="@+id/account_exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_below="@id/account_image"
-            android:layout_centerHorizontal="true"
-            android:text="ВЫЙТИ"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_below="@id/account_login_and_registration"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            android:text="Моя библиотека"/>
-    </RelativeLayout>
-    <LinearLayout
-        android:id="@+id/account_library"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/account_info_layout"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical">
-    </LinearLayout>
+            android:orientation="vertical">
+            <RelativeLayout
+                android:id="@+id/account_info_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/account_image"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_margin="20dp"
+                    android:src="@drawable/image_default_user"/>
+                <TextView
+                    android:id="@+id/account_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:layout_toRightOf="@id/account_image"/>
+                <TextView
+                    android:id="@+id/account_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@id/account_image"
+                    android:layout_below="@id/account_email"/>
+                <Button
+                    android:id="@+id/account_login_and_registration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/account_image"
+                    android:layout_centerHorizontal="true"
+                    android:text="ВОЙТИ/ЗАРЕГИСТРИРОВАТЬСЯ"/>
+                <Button
+                    android:id="@+id/account_exit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/account_image"
+                    android:layout_centerHorizontal="true"
+                    android:text="ВЫЙТИ"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_below="@id/account_login_and_registration"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:textStyle="bold"
+                    android:text="Моя библиотека"/>
+            </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/account_library"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_below="@id/account_info_layout"
+                android:layout_centerHorizontal="true"
+                android:orientation="vertical">
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
