--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/delivery_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:layout_margin="10sp"
-        android:layout_centerHorizontal="true"
-        android:scrollbars="vertical"
-        android:fontFamily="@font/roboto_light"
-        android:text="Заказы, сделанные на сайте chitai-gorod.ru, отправляются с московского склада. Поэтому сроки доставки напрямую зависят от расстояния между Москвой и пунктом назначения.\n
-\n
-Существует 3 способа получения заказов из интернет-магазина «Читай-город»: самовывоз, курьерская доставка и отправка почтой. Точную стоимость доставки Вы увидите во время оформления заказа.\n
-\n
-Оплата\n
-Способ оплаты:\n
-Оплата наличными или банковской картой при получении от курьера, в пункте самовывоза либо на Почте России.\n
-\n
-Юридическим лицам. Выставление счетов и документы\n
-Счета за интернет-заказы юридические лица получают на электронную почту, указанную при оформлении. Счёт придёт после передачи заказа в доставку. Вместе с заказом будут предоставлены документы: счёт, товарная накладная ТОРГ-12, счет-фактура.\n
-\n
-Порядок возврата денежных средств\n
-В случае отказа покупателя от интернет-заказа (до получения товара покупателем), оплаченного банковской картой на сайте интернет-магазина «Читай-город», для возврата денежных средств покупателю необходимо заполнить заявление (скачать бланк) и отправить заявление почте в адрес ООО «DokiDoki»: 625000, г. Тюмень, ул.Перикопская, дом 15а, либо направить путем передачи заявления через пункты самовывоза «DokiDoki»"/>
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/delivery_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_margin="10sp"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/roboto_light"
+            android:text="Заказы, сделанные на сайте chitai-gorod.ru, отправляются с московского склада. Поэтому сроки доставки напрямую зависят от расстояния между Москвой и пунктом назначения.\n
+    \n
+    Существует 3 способа получения заказов из интернет-магазина «Читай-город»: самовывоз, курьерская доставка и отправка почтой. Точную стоимость доставки Вы увидите во время оформления заказа.\n
+    \n
+    Оплата\n
+    Способ оплаты:\n
+    Оплата наличными или банковской картой при получении от курьера, в пункте самовывоза либо на Почте России.\n
+    \n
+    Юридическим лицам. Выставление счетов и документы\n
+    Счета за интернет-заказы юридические лица получают на электронную почту, указанную при оформлении. Счёт придёт после передачи заказа в доставку. Вместе с заказом будут предоставлены документы: счёт, товарная накладная ТОРГ-12, счет-фактура.\n
+    \n
+    Порядок возврата денежных средств\n
+    В случае отказа покупателя от интернет-заказа (до получения товара покупателем), оплаченного банковской картой на сайте интернет-магазина «Читай-город», для возврата денежных средств покупателю необходимо заполнить заявление (скачать бланк) и отправить заявление почте в адрес ООО «DokiDoki»: 625000, г. Тюмень, ул.Перикопская, дом 15а, либо направить путем передачи заявления через пункты самовывоза «DokiDoki»"/>
+    </RelativeLayout>
+</ScrollView>
