--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -28,7 +28,7 @@
                     android:layout_marginTop="40dp"
                     android:layout_toRightOf="@id/account_image"/>
                 <TextView
-                    android:id="@+id/account_login"
+                    android:id="@+id/account_real_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
