--- a/app/src/main/res/layout/fragment_store_book_item.xml
+++ b/app/src/main/res/layout/fragment_store_book_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
     android:orientation="vertical">
     <ImageView
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/book_image"
         android:layout_centerHorizontal="true"
+        android:progressTint="@color/white"
         style="?android:attr/ratingBarStyleSmall"
         android:focusable="false"
         android:isIndicator="true"
@@ -38,12 +39,30 @@
         android:layout_below="@id/book_name"
         android:layout_centerHorizontal="true"
         android:text="Автор произведения"/>
-    <Button
-        android:id="@+id/book_buy_button"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/book_author"
         android:layout_centerHorizontal="true"
-        android:focusable="false"
-        android:text="299,00 \u20BD"/>
+        android:layout_below="@id/book_author">
+        <Button
+            android:id="@+id/book_buy_button"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:theme="@style/BuyBook.Button"
+            android:textColor="@color/material_drawer_dark_primary_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="-7dp"
+            android:focusable="false"
+            android:text="299,00 \u20BD"/>
+        <Button
+            android:id="@+id/book_menu_button"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:theme="@style/BuyBook.Button"
+            android:textColor="@color/material_drawer_dark_primary_text"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/book_buy_button"
+            android:focusable="false"
+            android:text="\u22EE"/>
+    </RelativeLayout>
 </RelativeLayout>
