--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="BuyBook.Button" parent="ThemeOverlay.AppCompat">
+        <item name="colorAccent">#089c10</item>
+    </style>
 </resources>
