--- a/app/src/main/res/layout/dialog_registration.xml
+++ b/app/src/main/res/layout/dialog_registration.xml
@@ -24,6 +24,16 @@
         android:layout_marginRight="10dp"
         android:layout_below="@id/registration_email_input"
         android:hint="Пароль"/>
+    <EditText
+        android:id="@+id/registration_password_input_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@id/registration_password_input"
+        android:hint="Подтвердите пароль"/>
     <Button
         android:id="@+id/registration_registration"
         android:layout_width="match_parent"
@@ -31,7 +41,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_below="@id/registration_password_input"
+        android:layout_below="@id/registration_password_input_confirm"
         android:layout_centerHorizontal="true"
         android:text="ЗАРЕГИСТРИРОВАТЬСЯ"/>
 </RelativeLayout>
