--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/account_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="25dp"
                     android:layout_toRightOf="@id/account_image"/>
                 <TextView
                     android:id="@+id/account_real_name"
@@ -34,11 +34,18 @@
                     android:layout_marginTop="10dp"
                     android:layout_toRightOf="@id/account_image"
                     android:layout_below="@id/account_email"/>
+                <TextView
+                    android:id="@+id/account_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@id/account_image"
+                    android:layout_below="@id/account_real_name"/>
                 <Button
                     android:id="@+id/account_login_and_registration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_below="@id/account_image"
                     android:layout_centerHorizontal="true"
                     android:text="ВОЙТИ/ЗАРЕГИСТРИРОВАТЬСЯ"/>
@@ -46,7 +53,7 @@
                     android:id="@+id/account_exit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_below="@id/account_image"
                     android:layout_centerHorizontal="true"
                     android:text="ВЫЙТИ"/>
