--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,9 @@
     <style name="RemoveOrder.Button" parent="ThemeOverlay.AppCompat">
         <item name="colorAccent">#9bab9c</item>
     </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+    
 </resources>
