--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="10dp"
         android:hint="Ваш отзыв"
         android:gravity="top"
+        android:singleLine="true"
         android:text=""/>
 
     <Button
