--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -21,5 +21,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Оформить заказ стоимостью 299,00 \u20BD"/>
+        android:text="Оформить заказ"/>
 </RelativeLayout>
