--- a/app/src/main/res/layout/fragment_basket_item.xml
+++ b/app/src/main/res/layout/fragment_basket_item.xml
@@ -37,5 +37,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/order_book_price"
             android:text="Удалить из корзины"/>
+        <Button
+            android:id="@+id/order_book_count"
+            android:background="@color/material_drawer_dark_background"
+            android:textColor="@color/material_drawer_dark_primary_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
+            android:layout_below="@id/order_book_price"
+            android:layout_toRightOf="@id/order_book_remove_button"
+            android:text="1"/>
     </RelativeLayout>
 </RelativeLayout>
