--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,8 @@
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/background_splash</item>
+        <!--<item name="android:windowBackground">@drawable/background_splash</item>-->
+        <item name="SpinKitViewStyle">@style/SpinKitView.Large.FoldingCube</item>
     </style>
     
 </resources>
